Update the Documentation and add tests for helicoper controller
